--- a/HYNewNest/Features(主代码)/MeComponent/Controller/CNChangePwdVC.xib
+++ b/HYNewNest/Features(主代码)/MeComponent/Controller/CNChangePwdVC.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15400" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15404"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -60,7 +60,8 @@
                     </connections>
                 </button>
             </subviews>
-            <color key="backgroundColor" systemColor="systemGrayColor" red="0.5568627451" green="0.5568627451" blue="0.57647058819999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <viewLayoutGuide key="safeArea" id="Q5M-cg-NOt"/>
+            <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
                 <constraint firstItem="5VS-hu-66W" firstAttribute="top" secondItem="Q5M-cg-NOt" secondAttribute="top" id="1fh-yk-Ihh"/>
                 <constraint firstItem="Q1t-RG-6Dy" firstAttribute="leading" secondItem="Q5M-cg-NOt" secondAttribute="leading" constant="30" id="7ds-A5-XfK"/>
@@ -75,7 +76,6 @@
                 <constraint firstItem="Q1t-RG-6Dy" firstAttribute="top" secondItem="5VS-hu-66W" secondAttribute="bottom" id="vAP-Ly-uXG"/>
                 <constraint firstItem="Q5M-cg-NOt" firstAttribute="trailing" secondItem="nFO-3x-zvl" secondAttribute="trailing" constant="30" id="zC2-1c-ZCH"/>
             </constraints>
-            <viewLayoutGuide key="safeArea" id="Q5M-cg-NOt"/>
             <point key="canvasLocation" x="216" y="90"/>
         </view>
         <tapGestureRecognizer id="KdE-l3-DPF">
