--- a/HYNewNest/Features(主代码)/WalletComponent/WithdrawComponent/Controller/HYWithdrawViewController.xib
+++ b/HYNewNest/Features(主代码)/WalletComponent/WithdrawComponent/Controller/HYWithdrawViewController.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -11,6 +11,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="HYWithdrawViewController">
             <connections>
+                <outlet property="fundpwdEntryBg" destination="hRM-ja-CUf" id="rvK-5Q-ZNV"/>
                 <outlet property="sumitBtn" destination="az0-7H-f0l" id="z9F-8V-hpw"/>
                 <outlet property="tableView" destination="RxF-ga-guY" id="3Zw-aD-Kh8"/>
                 <outlet property="topView" destination="TJv-mn-le0" id="rqT-z4-5cV"/>
@@ -54,10 +55,19 @@
                         <action selector="didTapWithdrawBtn:" destination="-1" eventType="touchUpInside" id="fui-4u-ugF"/>
                     </connections>
                 </button>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hRM-ja-CUf">
+                    <rect key="frame" x="0.0" y="687" width="414" height="30"/>
+                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="30" id="Nh5-Kr-QD0"/>
+                    </constraints>
+                </view>
             </subviews>
             <viewLayoutGuide key="safeArea" id="Q5M-cg-NOt"/>
-            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+            <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
+                <constraint firstItem="Q5M-cg-NOt" firstAttribute="trailing" secondItem="hRM-ja-CUf" secondAttribute="trailing" id="9IZ-8f-cpT"/>
+                <constraint firstItem="hRM-ja-CUf" firstAttribute="leading" secondItem="Q5M-cg-NOt" secondAttribute="leading" id="A6R-my-sIe"/>
                 <constraint firstItem="TJv-mn-le0" firstAttribute="top" secondItem="Q5M-cg-NOt" secondAttribute="top" id="Bms-LJ-jC6"/>
                 <constraint firstItem="RxF-ga-guY" firstAttribute="top" secondItem="TJv-mn-le0" secondAttribute="bottom" constant="6" id="Ndn-h9-gWH"/>
                 <constraint firstItem="TJv-mn-le0" firstAttribute="leading" secondItem="Q5M-cg-NOt" secondAttribute="leading" id="QCJ-bQ-0rx"/>
@@ -65,6 +75,7 @@
                 <constraint firstItem="Q5M-cg-NOt" firstAttribute="trailing" secondItem="RxF-ga-guY" secondAttribute="trailing" id="cb4-Rj-ZpE"/>
                 <constraint firstItem="az0-7H-f0l" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="15" id="eQY-1v-ZiQ"/>
                 <constraint firstItem="Q5M-cg-NOt" firstAttribute="trailing" secondItem="az0-7H-f0l" secondAttribute="trailing" constant="15" id="lIe-8V-0FF"/>
+                <constraint firstItem="hRM-ja-CUf" firstAttribute="top" secondItem="az0-7H-f0l" secondAttribute="bottom" id="n3q-xy-V7a"/>
                 <constraint firstItem="Q5M-cg-NOt" firstAttribute="bottom" secondItem="az0-7H-f0l" secondAttribute="bottom" constant="175" id="qPo-gs-R0N"/>
                 <constraint firstItem="TJv-mn-le0" firstAttribute="trailing" secondItem="Q5M-cg-NOt" secondAttribute="trailing" id="vHy-4C-dcG"/>
                 <constraint firstItem="RxF-ga-guY" firstAttribute="leading" secondItem="Q5M-cg-NOt" secondAttribute="leading" id="ylB-ZC-8FU"/>
