feat: 微脉圈升级 代码优化

--- a/HYNewNest/Features(主代码)/MeComponent/View/BYMyWalletView.xib
+++ b/HYNewNest/Features(主代码)/MeComponent/View/BYMyWalletView.xib
@@ -162,7 +162,7 @@
                     <rect key="frame" x="0.0" y="47" width="503" height="87"/>
                     <subviews>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jI1-A9-O9a" userLabel="line_separator">
-                            <rect key="frame" x="165.5" y="68" width="0.5" height="12"/>
+                            <rect key="frame" x="165.5" y="48" width="0.5" height="12"/>
                             <color key="backgroundColor" red="1" green="1" blue="1" alpha="0.10160661610000001" colorSpace="custom" customColorSpace="calibratedRGB"/>
                             <constraints>
                                 <constraint firstAttribute="width" constant="0.5" id="V5v-rN-Ktn"/>
@@ -170,7 +170,7 @@
                             </constraints>
                         </view>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="W7F-oS-D1f" userLabel="line_separator">
-                            <rect key="frame" x="331.5" y="68" width="0.5" height="12"/>
+                            <rect key="frame" x="331.5" y="48" width="0.5" height="12"/>
                             <color key="backgroundColor" red="1" green="1" blue="1" alpha="0.10160661610000001" colorSpace="custom" customColorSpace="calibratedRGB"/>
                             <constraints>
                                 <constraint firstAttribute="width" constant="0.5" id="QP0-rJ-cLg"/>
@@ -298,7 +298,7 @@
                         <constraint firstItem="jI1-A9-O9a" firstAttribute="leading" secondItem="h6g-gB-L2P" secondAttribute="trailing" id="oE2-Xk-wts"/>
                         <constraint firstAttribute="bottom" secondItem="YTX-Jn-CUR" secondAttribute="bottom" id="ohk-bW-KHG"/>
                         <constraint firstAttribute="trailing" secondItem="YTX-Jn-CUR" secondAttribute="trailing" id="s9E-Lo-7Pa"/>
-                        <constraint firstItem="jI1-A9-O9a" firstAttribute="centerY" secondItem="Mn6-Yi-dPJ" secondAttribute="centerY" constant="20" id="uqJ-bh-wtG"/>
+                        <constraint firstItem="jI1-A9-O9a" firstAttribute="centerY" secondItem="Mn6-Yi-dPJ" secondAttribute="centerY" id="uqJ-bh-wtG"/>
                         <constraint firstAttribute="bottom" secondItem="Mn6-Yi-dPJ" secondAttribute="bottom" id="v9A-D0-5OX"/>
                     </constraints>
                 </view>
