--- a/HYNewNest/Features(主代码)/NewbieMissionComponent/Controller/BYMissionCompleteVC.xib
+++ b/HYNewNest/Features(主代码)/NewbieMissionComponent/Controller/BYMissionCompleteVC.xib
@@ -13,6 +13,7 @@
                 <outlet property="bannerBackground" destination="boF-GP-bhs" id="UB0-yU-Zuq"/>
                 <outlet property="gradientLabel" destination="Izz-lJ-6WT" id="g37-h9-pOA"/>
                 <outlet property="receivedUSDTLabel" destination="wEy-nh-vyU" id="y32-5Y-nzg"/>
+                <outlet property="rewardLabel" destination="wEy-nh-vyU" id="ghY-Kd-KAe"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -34,7 +35,7 @@
                         <constraint firstAttribute="height" constant="48" id="wmt-hY-d9E"/>
                     </constraints>
                     <fontDescription key="fontDescription" name="PingFangSC-Regular" family="PingFang SC" pointSize="17"/>
-                    <state key="normal" title="去首頁">
+                    <state key="normal" title="返回任务中心">
                         <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </state>
                     <userDefinedRuntimeAttributes>
