--- a/HYNewNest/Features(主代码)/MeComponent/View/BYMyWalletView.xib
+++ b/HYNewNest/Features(主代码)/MeComponent/View/BYMyWalletView.xib
@@ -30,14 +30,14 @@
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="Vfm-VX-G1I" userLabel="UIView">
-            <rect key="frame" x="0.0" y="0.0" width="503" height="201"/>
+            <rect key="frame" x="0.0" y="0.0" width="503" height="202"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
                 <view hidden="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" translatesAutoresizingMaskIntoConstraints="NO" id="grQ-Q9-5Gb">
-                    <rect key="frame" x="0.0" y="114" width="503" height="87"/>
+                    <rect key="frame" x="0.0" y="114" width="503" height="88"/>
                     <subviews>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="WA6-rK-o0i">
-                            <rect key="frame" x="0.0" y="20.5" width="165.5" height="66.5"/>
+                            <rect key="frame" x="0.0" y="20.5" width="165.5" height="67.5"/>
                             <subviews>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0.00" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" adjustsFontForContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Fkm-PZ-cuy">
                                     <rect key="frame" x="0.0" y="14.5" width="165.5" height="19"/>
@@ -62,7 +62,7 @@
                             </constraints>
                         </view>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9Jm-zC-q4P">
-                            <rect key="frame" x="332" y="20.5" width="171" height="66.5"/>
+                            <rect key="frame" x="332" y="20.5" width="171" height="67.5"/>
                             <subviews>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="+0.00" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" adjustsFontForContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="AHH-vQ-XfJ">
                                     <rect key="frame" x="0.0" y="14.5" width="171" height="19"/>
@@ -94,7 +94,7 @@
                             </constraints>
                         </view>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="DZd-fW-uuX">
-                            <rect key="frame" x="166" y="20.5" width="165.5" height="66.5"/>
+                            <rect key="frame" x="166" y="20.5" width="165.5" height="67.5"/>
                             <subviews>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0.00" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" adjustsFontForContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="2mG-1q-G9K">
                                     <rect key="frame" x="0.0" y="14.5" width="165.5" height="19"/>
@@ -119,7 +119,7 @@
                             </constraints>
                         </view>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3Ss-1p-Dq3" userLabel="line_separator">
-                            <rect key="frame" x="331.5" y="37.5" width="0.5" height="12"/>
+                            <rect key="frame" x="331.5" y="48" width="0.5" height="12"/>
                             <color key="backgroundColor" red="1" green="1" blue="1" alpha="0.10160661610000001" colorSpace="custom" customColorSpace="calibratedRGB"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="12" id="aQo-Zz-hiO"/>
@@ -127,7 +127,7 @@
                             </constraints>
                         </view>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="h1M-gD-2lc" userLabel="line_separator">
-                            <rect key="frame" x="165.5" y="37.5" width="0.5" height="12"/>
+                            <rect key="frame" x="165.5" y="48" width="0.5" height="12"/>
                             <color key="backgroundColor" red="1" green="1" blue="1" alpha="0.10160661610000001" colorSpace="custom" customColorSpace="calibratedRGB"/>
                             <constraints>
                                 <constraint firstAttribute="width" constant="0.5" id="Aa7-XJ-Mng"/>
@@ -142,7 +142,7 @@
                         <constraint firstItem="DZd-fW-uuX" firstAttribute="leading" secondItem="h1M-gD-2lc" secondAttribute="trailing" id="33c-We-DgJ"/>
                         <constraint firstItem="hw0-Jx-CzQ" firstAttribute="leading" secondItem="grQ-Q9-5Gb" secondAttribute="leading" constant="17.5" id="6kv-Gf-u24"/>
                         <constraint firstItem="DZd-fW-uuX" firstAttribute="top" secondItem="hw0-Jx-CzQ" secondAttribute="bottom" id="7gC-o9-DU6"/>
-                        <constraint firstItem="3Ss-1p-Dq3" firstAttribute="centerY" secondItem="grQ-Q9-5Gb" secondAttribute="centerY" id="ADY-wP-fGB"/>
+                        <constraint firstItem="3Ss-1p-Dq3" firstAttribute="centerY" secondItem="grQ-Q9-5Gb" secondAttribute="centerY" constant="10" id="ADY-wP-fGB"/>
                         <constraint firstItem="DZd-fW-uuX" firstAttribute="bottom" secondItem="grQ-Q9-5Gb" secondAttribute="bottom" id="D0w-tf-v1K"/>
                         <constraint firstItem="9Jm-zC-q4P" firstAttribute="trailing" secondItem="grQ-Q9-5Gb" secondAttribute="trailing" id="GqP-hs-J3z"/>
                         <constraint firstItem="WA6-rK-o0i" firstAttribute="leading" secondItem="grQ-Q9-5Gb" secondAttribute="leading" id="NiP-of-IQA"/>
@@ -155,7 +155,7 @@
                         <constraint firstItem="3Ss-1p-Dq3" firstAttribute="leading" secondItem="DZd-fW-uuX" secondAttribute="trailing" id="qLV-eU-jTh"/>
                         <constraint firstItem="9Jm-zC-q4P" firstAttribute="leading" secondItem="3Ss-1p-Dq3" secondAttribute="trailing" id="tK8-gF-efH"/>
                         <constraint firstItem="WA6-rK-o0i" firstAttribute="top" secondItem="hw0-Jx-CzQ" secondAttribute="bottom" id="yxK-qU-NlH"/>
-                        <constraint firstItem="h1M-gD-2lc" firstAttribute="centerY" secondItem="grQ-Q9-5Gb" secondAttribute="centerY" id="zVE-N4-IrD"/>
+                        <constraint firstItem="h1M-gD-2lc" firstAttribute="centerY" secondItem="grQ-Q9-5Gb" secondAttribute="centerY" constant="10" id="zVE-N4-IrD"/>
                     </constraints>
                 </view>
                 <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Hdm-kv-q1Y">
@@ -438,7 +438,7 @@
                     </constraints>
                 </view>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cSi-cK-xwv">
-                    <rect key="frame" x="198.5" y="56" width="106.5" height="22"/>
+                    <rect key="frame" x="210" y="53" width="83" height="22"/>
                     <state key="normal" image="DOWN"/>
                     <state key="selected" image="UP"/>
                     <connections>
@@ -451,7 +451,7 @@
             <constraints>
                 <constraint firstItem="Hdm-kv-q1Y" firstAttribute="leading" secondItem="Mxp-iV-Gwm" secondAttribute="leading" id="0xv-U7-2fx"/>
                 <constraint firstItem="1AI-F3-gMh" firstAttribute="top" secondItem="Vfm-VX-G1I" secondAttribute="top" id="13O-7u-cBc"/>
-                <constraint firstItem="cSi-cK-xwv" firstAttribute="top" secondItem="Vfm-VX-G1I" secondAttribute="top" constant="56" id="1Kf-ip-P0n"/>
+                <constraint firstItem="cSi-cK-xwv" firstAttribute="top" secondItem="Vfm-VX-G1I" secondAttribute="top" constant="53" id="1Kf-ip-P0n"/>
                 <constraint firstItem="grQ-Q9-5Gb" firstAttribute="top" secondItem="Hdm-kv-q1Y" secondAttribute="bottom" constant="-20" id="AUa-ja-rAj"/>
                 <constraint firstItem="W7F-oS-D1f" firstAttribute="leading" secondItem="aFh-tL-bYr" secondAttribute="leading" id="CmT-zj-ly8"/>
                 <constraint firstAttribute="bottom" secondItem="grQ-Q9-5Gb" secondAttribute="bottom" id="WDc-cx-u0J"/>
@@ -465,12 +465,12 @@
                 <constraint firstItem="1AI-F3-gMh" firstAttribute="leading" secondItem="Mxp-iV-Gwm" secondAttribute="leading" id="z1A-Jn-ppV"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-            <point key="canvasLocation" x="-679" y="-203"/>
+            <point key="canvasLocation" x="44" y="-160"/>
         </view>
     </objects>
     <resources>
-        <image name="DOWN" width="106.5" height="16.5"/>
-        <image name="UP" width="106.5" height="16.5"/>
+        <image name="DOWN" width="83" height="11"/>
+        <image name="UP" width="83" height="11"/>
         <image name="next" width="5" height="10"/>
         <image name="疑问" width="16" height="16"/>
     </resources>
